# Astroids-Clone-ECS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Action.h  ActionManager.h  AssetManager.h  AudioSystem.h  Collision.h  Components.h  Entity.h  EntityManager.h  Game.h  GameState.h  Gui.h  Input.h  LivesSystem.h  MovementSystem.h  Music.h  PhysicsSystem.h  RenderSystem.h  Renderer.h  Scene.h  SceneGame.h  SceneRestart.h  SceneStart.h  ScoreSystem.h  Sound.h  System.h  SystemManager.h  Text.h  Texture.h  Timer.h  Vec2.h  VertexArray.h  Window.h
src/: Action.cpp  ActionManager.cpp  AssetManager.cpp  AudioSystem.cpp  Collision.cpp  EntityManager.cpp  Game.cpp  Gui.cpp  Input.cpp  LivesSystem.cpp  MovementSystem.cpp  Music.cpp  PhysicsSystem.cpp  RenderSystem.cpp  Renderer.cpp  SceneGame.cpp  SceneRestart.cpp  SceneStart.cpp  ScoreSystem.cpp  Sound.cpp  Text.cpp  Texture.cpp  Timer.cpp  VertexArray.cpp  Window.cpp  main.cpp
